--- a/app/Gemfile
+++ b/app/Gemfile
@@ -12,6 +12,9 @@ gem 'httparty'
 gem 'dotenv-rails'
 gem 'geocoder'
 gem "puma", ">= 5.0"
+gem 'devise-jwt'
+gem 'cpf_cnpj'
+gem 'kaminari'
 
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
 # gem "jbuilder"
